# istd

./: README.md  meson.build
include/istd/ds/: arr.h
include/istd/util/: err.h  macro.h  test.h  tty.h
src/: meson.build
src/istd/ds/: arr.c
src/istd/util/: err.c  test.c  utf8.c
test/: meson.build
test/istd/ds/: arr.c
test/istd/util/: test.c
